CHANGE HISTORY
--------------------------------

For complete documentation, see http://www.weewx.com/docs


1.12.4 02/12/12

User Alf Høgemark found an error in the encoding of solar data for CWOP and sent
me a fix. Thanks, Alf!

Now looks for latest version of pysqlite on the machine and uses that.


1.12.3 02/09/12

Added  start script  for FreeBSD,  courtesy  of user  Fabian Abplanalp.  Thanks,
Fabian!

Added the ability to respond to a "status" query to the Debian startup script.

RESTful posts can now recover from more HTTP errors.

Station serial port can now recover from a SerialException error (usually caused
when there is a process competing for the serial port).

Continue to fiddle with the retry logic when reading LOOP data.


1.12.2 01/18/12

Added check for FTP error code '521'  to the list of possibilities if a directory
already exists. Thanks to user Clyde!

More complete information when unable to load a module file. Thanks, Jason!

Added a  few new  unit types  to the list  of possible  target units  when using
explicit conversion. Thanks, Antonio!

Discovered and fixed problem caused by  the Davis docs giving the wrong "resend"
code (should be decimal 21, not hex 21).

Improved robustness of VantagePro configuration utility.

Fixed problem where an exception gets thrown when changing VP archive interval.

Simplified some of the logic in the VP2 driver.

 
1.12.1 11/03/11

Now corrects  for rain bucket  size if it  is something other than  the standard
0.01 inch bucket.


1.12.0 10/29/11

Added  the  ability  to change  bucket  type,  rain  year start,  and  barometer
calibration data  in the console  using the utility configure.py.   Added option
"--info",  which  queries  the  console  and returns  information  about  EEPROM
settings.  Changed  configure.py so it can  do hardware-specific configurations,
in anticipation of supporting hardware besides the Davis series.

Reorganized the documentation.


1.11.0 10/06/11
