@@ -144,17 +144,6 @@
 			</p>
 			<ol>
 				<li>
-					<a href="http://www.sqlite.org/">sqlite3</a> (Version 3.5 or greater)
-					A SQL database written in C, which <span class="code">weewx</span> uses
-					to store data pulled from the weather station. Comes with many versions
-					of Debian and other Linux distributions.
-				</li>
-				<li>
-					<a href="http://pypi.python.org/pypi/pysqlite/">pysqlite</a> (Version
-					2.5 or greater) The Python interface to sqlite3. This is also included
-					in many versions of Debian and other Linux distributions.
-				</li>
-				<li>
 					<a href="http://pypi.python.org/pypi/configobj/">configobj</a> (Version
 					4.5 or greater) Manages the configuration file <span class="code">weewx.conf</span>.
 				</li>
@@ -177,7 +166,7 @@
 			</p>
 			<ul>
 				<li>
-					<a href="http://rhodesmill.org/pyephem">pyephem</a> (Version V3.7.3
+					<span class="code"><a href="http://rhodesmill.org/pyephem">pyephem</a></span> (Version V3.7.3
 					or greater). For extended almanac information. If not installed,
 					fallback information will be used.
 				</li>
@@ -199,16 +188,15 @@
 			<p>
 				Option #1 is easier, but if your Linux distribution does not come with such
 				tools, you may have to use <span class="code">pip</span>. If you
-				choose to install <a href="http://rhodesmill.org/pyephem">pyephem</a>, then
+				choose to install <span class="code"><a href="http://rhodesmill.org/pyephem">pyephem</a></span>, then
 				as of the time of this writing, it can only be installed using <span class="code">
-				pip</span> (<a href="#Installing_pyephem">see
-				instructions below</a>).
+				pip</span>.
 			</p>
 			<p>
 				Brief instructions
 				for both approaches are given below.
 			</p>
-			<h3>Installation on Debian distributions (including Ubuntu) using <span class="code">apt-get</span></h3>
+			<h3>Installation on Debian distributions (including Ubuntu and Mint) using <span class="code">apt-get</span></h3>
 			<p>
 				The instructions that follow are for using the Debian tool <span class="code">apt-get</span>, but the same package names would be used
 				should you chose to use a graphical interface such as the Synaptic Package Manager.
@@ -217,10 +205,6 @@
 				To install the required packages:
 			</p>
 			<p class="tty">
-				sudo apt-get install sqlite3
-				<br />
-				sudo apt-get install python-pysqlite2
-				<br />
 				sudo apt-get install python-configobj
 				<br />
 				sudo apt-get install python-serial
@@ -230,71 +214,49 @@
 				sudo apt-get install python-imaging
 			</p>
 			<p>
-				Note that <span class="code">sqlite3</span> and the <span class="code"> python-imaging</span> (PIL) packages are preinstalled on many Debian
-				distributions so the corresponding commands may not do anything.
+				Note that the <span class="code"> python-imaging</span> (PIL) package is often preinstalled on many Debian
+				distributions so the install may not actually do anything.
 			</p>
 			<p>
 				As noted above, if you choose to install the optional package <span class="code">pyephem</span>,
-				then it will have to be installed using <span class="code">pip</span> (<a href="#Installing_pyephem">see
-				instructions below</a>).
+				then it will have to be installed using <span class="code"><a href="http://pypi.python.org/pypi/pip">pip</a></span>.
+				See their website for instructions on how to install this tool. Once installed, then installing
+				<span class="code">pyephem</span> is easy:
 			</p>
+			<pre>sudo pip install pyephem</pre>
+			
 			<h3>Installation on SuSE using <span class="code">yast</span></h3>
 			<p>
 				My SuSE 11.3 system came with some of the prerequisites installed, some available
-				through <span class="code">yast</span>, and some that required <span class="code">easy_install</span>.
+				through <span class="code">yast</span>, and some that required <span class="code"><a href="http://pypi.python.org/pypi/pip">pip</a></span>.
 			</p>
 			<p>
-				To start, some packages want to install themselves into <span class="code">/usr/local/lib/python2.6/site-packages</span>, which may
-				or may not exist. If it does not, you may have to create it before
-				running <span class="code">easy_install</span>:
-			</p>
-			<pre>sudo mkdir /usr/local/lib/python2.6</pre>
-			<pre>sudo mkdir /usr/local/lib/python2.6/site-packages</pre>
-			<p>
-				Install the
-				gcc compiler:
-			</p>
-			<pre>sudo yast -i gcc</pre>
-			<p>
-				Then install <span class="code">pip</span>:
-			</p>
-			<pre>sudo yast -i python-pip</pre>
-			<p>
-				Install <span class="code">configobj</span>:
-			</p>
-			<pre>sudo yast -i python-configobj</pre>
-			<p>
-				Install PIL:
-			</p>
-			<pre>sudo yast -i python-imaging</pre>
-			<p>
-				Install <span class="code">pyserial</span>:
-			</p>
-			<pre>sudo yast -i python-serial</pre>
-			<p>
-				Install <span class="code">sqlite3</span>. My SuSE 11.3 system came with V3.6.4, which works just fine. However, if
-				you need to install:
+				Using <span class="code">yast</span>, install the following:
 			</p>
 			<p class="tty">
-				sudo yast -i sqlite3
+				sudo yast -i gcc<br/>
+				sudo yast -i python-devel<br/>
+				sudo yast -i python-configobj<br/>
+				sudo yast -i python-serial<br/>
+				sudo yast -i python-imaging<br/>
+				sudo yast -i python-setuptools
 			</p>
+			
 			<p>
-				Install the Python development package (need for <span class="code"> pysqlite</span>):
+				Now install <span class="code">pip</span>. There are many ways to do this (see the 
+				<span class="code"><a href="http://pypi.python.org/pypi/pip">pip</a></span> website), but perhaps
+				the simplest is by using <span class="code">get-pip.py</span>:
 			</p>
-			<pre>sudo yast -i python-devel</pre>
+			<pre>sudo curl https://raw.github.com/pypa/pip/master/contrib/get-pip.py | python</pre>
 			<p>
-				Install <span class="code">pysqlite</span>:
-			</p>
-			<pre>pip install pysqlite</pre>
-			<p>
-				Install <span class="code">Cheetah</span>:
+				Now using <span class="code">pip</span>, install Cheetah:
 			</p>
 			<pre>pip install Cheetah</pre>
 			<p>
-				As noted above, if you choose to install the optional package <span class="code">pyephem</span>,
-				then it will have to be installed using <span class="code">pip</span> (<a href="#Installing_pyephem">see
-				instructions below</a>).
+				Finally, if you choose to install the optional package <span class="code">pyephem</span>,
+				then install it using <span class="code">pip</span>:
 			</p>
+			<pre>pip install pyephem</pre>
 			<h3>Installation using <span class="code">pip</span></h3>
 			<p>
 				An alternative approach to installing the required packages is by using the
@@ -305,51 +267,14 @@
 				Once <span class="code">pip</span> has been installed, installing
 				the rest of the packages is very easy.
 			</p>
+			<p class="tty">
+			pip install configobj</br>
+			pip install pyserial</br>
+			pip install Cheetah</br>
+			pip install pil
 			<p>
-				My Ubuntu 8.10 system came with sqlite V3.5.9, which works just fine. If
-				you do not have sqlite3, refer to <a href="http://www.sqlite.org">the sqlite
-				webpage</a> for installation instructions.
-			</p>
-			<p>
-				While Version 2.3.X of <a href="http://pypi.python.org/pypi/pysqlite/">pysqlite</a>
-				is included with many versions of Python, the more recent 2.5.X or greater is
-				required in order to take advantage of transaction contexts. Hence, you may
-				have to install or upgrade. Because pysqlite builds a C library, you may have
-				to install the Python development environment first, if you have not already
-				done so. Generally, this means installing the gcc compiler. You may also have
-				to install the sqlite3 development environment as well.
-			</p>
-			<p>
-				With the development environment in place, you can easily build and install
-				pysqlite:
-			</p>
-			<pre>pip install pysqlite</pre>
-			<p>
-				If your system already has a version of pysqlite installed, but it is not
-				a high enough version (<span class="code">pip</span> will tell you
-				the version you have), then you may have to force an upgrade:
-			</p>
-			<pre>pip install --upgrade pysqlite</pre>
-			<p>
-				The other packages are straightforward. Install configobj:
-			</p>
-			<pre>pip install configobj</pre>
-			<p>
-				Install pyserial:
-			</p>
-			<pre><span class="code">pip install pyserial</span></pre>
-			<p>
-				Install Cheetah:
-			</p>
-			<pre><span class="code">pip install Cheetah</span></pre>
-			<p>
-				Install the Python Imaging Library (PIL). My version of Python came with V1.1.6, which works great, but if you need
-				to install
-			</p>
-			<pre>pip install pil</pre>
-			<p id="Installing_pyephem">
 				If you choose to install the optional
-				package pyephem:
+				package <span class="code">pyephem</span>:
 			</p>
 			<pre>pip install pyephem</pre>
 			<h2>Time</h2>
